@@ -4,6 +4,7 @@ import souther.compiler.diag.CompileException;
 
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -53,9 +54,8 @@ class CompileModuleChainTest {
         assertEquals(5L, Codecs.encode(loader, "a.N", r), "inc is identity, so quad round-trips 5 through the chain");
     }
 
-    // A `>->` whose departed case comes from an imported behavior would need that upstream case to
-    // join the composition's sealed result union, which it cannot (its class is in another package).
-    // The compiler rejects it (E1606) rather than emit a union permitting a case it never generates.
+    // A `>->` whose departed case comes from an imported behavior: the case's own class cannot
+    // implement a union declared here, so it joins through the bridge case this module emits.
     private static final String PA = """
             module pa exposing ( Priced, Empty, price )
             data Priced = { total: Int }
@@ -75,11 +75,22 @@ class CompileModuleChainTest {
             """;
 
     @Test
-    void aDepartedImportedCaseInACompositionUnionIsRejected() {
-        // checkout's output is Receipt | Empty; Empty is imported from pa, so it cannot be a member of
-        // pb's sealed CheckoutResult.
-        CompileException e = assertThrows(CompileException.class,
-                () -> Compiler.compileModules(List.of(PA, PB)));
-        assertEquals("E1606", e.diagnostic().code());
+    void aDepartedImportedCaseReachesTheCompositionsUnionThroughABridgeCase() throws Exception {
+        // checkout's output is Receipt | Empty. Receipt is pb's own and is the case itself; Empty is
+        // pa's, so pb emits pb.EmptyCase and permits that.
+        Map<String, byte[]> classes = Compiler.compileModules(List.of(PA, PB));
+        BytesClassLoader loader = new BytesClassLoader(classes, CompileModuleChainTest.class.getClassLoader());
+        assertEquals(List.of(loader.loadClass("pb.EmptyCase"), loader.loadClass("pb.Receipt")),
+                Arrays.asList(loader.loadClass("pb.CheckoutResult").getPermittedSubclasses()));
+
+        Object checkout = loader.loadClass("pb.Checkout").getMethod("of").invoke(null);
+        assertEquals("pb.Receipt", Codecs.apply(checkout, 300L).getClass().getName(),
+                "the mainline runs to the last stage and answers with this module's own case");
+
+        Object departed = Codecs.apply(checkout, 0L);
+        assertEquals("pb.EmptyCase", departed.getClass().getName(),
+                "the imported case departs at the first stage and joins the union bridged");
+        assertEquals("pa.Empty",
+                departed.getClass().getMethod("value").invoke(departed).getClass().getName());
     }
 }
